Fix fat button text and icons align when on lower resolutions

--- a/src/css/import.css
+++ b/src/css/import.css
@@ -5,6 +5,7 @@
 }
 
 .upload-buttons .btn {
+    display: flex;
     height: 100%;
     max-height: 100px;
     white-space: normal;
